# basic-platform

./: Makefile  Procfile  README.md  pyproject.toml
.github/workflows/: ci.yml
basic_api/: main.py
templates/: index.html
templates/partials/: result.html
