[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["phernandez <phernandez@basicmachines.co>"]
description = ""
name = "basic-api"
packages = [{include = "basic_api"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asgi-htmx = ">=0.1.0,<0.2.0"
fastapi = "^0.96.0"
jinja2 = "^3.1.2"
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.7"
mypy = "^1.3.0"
ruff = "^0.0.272"
toml-sort = "^0.23.1"
